# verifica

./: .copr.enc  .gitignore  .travis-build.sh  .travis.yml  Makefile.am  README  README.md  configure.ac  svn-commit.tmp  verifica.sh.in
fedora/SPECS/: verifica.spec
share/: anag.nml.template  analisi.nml.template  areabox.nml.template  areaoss.nml.template  boe.nml.template  caldescr.template  corrispondenze_parametri.txt  cumula.nml.template  euro.nml.template  expansion_ver.template  ffdd_nml.template  getgribdat_ver  griBlocale.txt  lista.nml.template  lista_ens.nml.template  lsm_cleps.grib  lsm_lmdet.grib  lsm_lmsmr2031.grib  obm_cleps_2004_015.grib  obm_epsrm_2004_015.grib  obsmask.nml.template  odbc.nml.template  orog_cleps.grib  orog_lmdet.grib  orog_lmsmr2031.grib  param.nml.template  profile_cleps  profile_clepsvis  profile_epsse  profile_lmsmr2  profile_lmsmr2031  profile_medit  profile_necmwfeu  profile_scores  profile_swann1100  profile_verifica  profilestra.template  profilever.template  region.nml.template  ricopia_ged.template  (+6 more)
src/: Makefile.am  common_namelists.f90  scores_prob_util_dballe.f90  scores_util_dballe.f90  test_scores_prob.f90  util_dballe.f90  ver_boxfix_dballe.f90  ver_calcola_descrittore.f90  ver_calcola_descrittore.sh  ver_calcola_td.f90  ver_crea_obsmask.f90  ver_crea_obsmask.sh  ver_cumula_preci.f90  ver_cumula_preci.sh  ver_estrai_calcola.sh  ver_ffdd.f90  ver_interpola_dballe.f90  ver_leggidati_ana.f90  ver_leggidati_euro.f90  ver_leggidati_mare.f90  ver_leggidati_regio.f90  ver_lettura.f90  ver_prepara_nml.sh  ver_pulisci.f90  ver_pulisci.sh  ver_scores.sh  ver_scores_dballe.f90  ver_scores_prob.sh  ver_scores_prob_dballe.f90  ver_scores_prob_dballe_resampling.f90  ver_scrivi_ana.sh  ver_scrivi_euro.sh  ver_scrivi_mare.sh  ver_scrivi_oss.sh  ver_scrivi_prev.sh
